--- a/index.html
+++ b/index.html
@@ -223,4 +223,5 @@
     function r(min, max) { return Math.floor(Math.random() * (max - min + 1)) + min; }
 </script>
 </body>
-</html>請把介面換成中文
+
+</html>
