--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="menu-title">單元二：加減計算</div>
         <div class="menu">
             <button class="menu-btn btn-calc" id="t-a-0" onclick="toggleType('a-0')">1-1 加法(簡單)</button>
-            <button class="menu-btn btn-calc" id="t-a-1" onclick="toggleType('a-1')">1-2 加法(中等)</button>
-            <button class="menu-btn btn-calc" id="t-a-2" onclick="toggleType('a-2')">1-3 加法(困難)</button>
             <button class="menu-btn btn-calc" id="t-s-0" onclick="toggleType('s-0')">2-1 減法(簡單)</button>
+            <button class="menu-btn btn-calc" id="t-a-1" onclick="toggleType('a-1')">1-2 加法(中等)</button>
             <button class="menu-btn btn-calc" id="t-s-1" onclick="toggleType('s-1')">2-2 減法(中等)</button>
+            <button class="menu-btn btn-calc" id="t-a-2" onclick="toggleType('a-2')">1-3 加法(困難)</button>
             <button class="menu-btn btn-calc" id="t-s-2" onclick="toggleType('s-2')">2-3 減法(困難)</button>
         </div>
         <button class="start-action" id="startBtn" disabled onclick="startApp()">開始練習</button>
@@ -137,7 +137,7 @@
 // --- 以下是新加入的自動跳格偵測 ---
         setTimeout(() => {
             // 抓取畫面上所有的輸入框（換算的數字格、單位的數字格、直式的數字格）
-            const allInputs = document.querySelectorAll('.digit-input, .unit-input, .calc-input');
+            const allInputs = document.querySelectorAll('.digit-input');
             allInputs.forEach((input, index) => {
                 input.oninput = function() {
                     // 如果輸入了數字，且不是最後一格，就自動聚焦到下一格
