--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         
         <div class="menu-title">單元一：單位換算</div>
         <div class="menu">
-            <button class="menu-btn btn-conv" id="t-c-01" onclick="toggleType('c-01')">0-1 公升換毫升</button>
-            <button class="menu-btn btn-conv" id="t-c-02" onclick="toggleType('c-02')">0-2 毫升換公升</button>
-            <button class="menu-btn btn-conv" id="t-c-11" onclick="toggleType('c-11')">1-1 組合 (初級)</button>
-            <button class="menu-btn btn-conv" id="t-c-12" onclick="toggleType('c-12')">1-2 組合 (進階)</button>
-            <button class="menu-btn btn-conv" id="t-c-21" onclick="toggleType('c-21')">2-1 拆解 (初級)</button>
-            <button class="menu-btn btn-conv" id="t-c-22" onclick="toggleType('c-22')">2-2 拆解 (進階)</button>
+            <button class="menu-btn btn-conv" id="t-c-01" onclick="toggleType('c-01')">0-1 換成毫升(簡單)</button>
+            <button class="menu-btn btn-conv" id="t-c-02" onclick="toggleType('c-02')">0-2 毫升轉換(簡單)</button>
+            <button class="menu-btn btn-conv" id="t-c-11" onclick="toggleType('c-11')">1-1 換成毫升(初級)</button>
+            <button class="menu-btn btn-conv" id="t-c-21" onclick="toggleType('c-21')">2-1 毫升轉換(初級)</button>
+            <button class="menu-btn btn-conv" id="t-c-12" onclick="toggleType('c-12')">1-2 換成毫升(進階)</button>
+            <button class="menu-btn btn-conv" id="t-c-22" onclick="toggleType('c-22')">2-2 毫升轉換(進階)</button>
         </div>
 
         <div class="menu-title">單元二：加減計算</div>
         <div class="menu">
-            <button class="menu-btn btn-calc" id="t-a-0" onclick="toggleType('a-0')">0-1 加法 (簡單)</button>
-            <button class="menu-btn btn-calc" id="t-s-0" onclick="toggleType('s-0')">0-2 減法 (簡單)</button>
-            <button class="menu-btn btn-calc" id="t-a-1" onclick="toggleType('a-1')">1-1 加法 (中等)</button>
-            <button class="menu-btn btn-calc" id="t-s-1" onclick="toggleType('s-1')">1-2 減法 (中等)</button>
-            <button class="menu-btn btn-calc" id="t-a-2" onclick="toggleType('a-2')">2-1 加法 (困難)</button>
-            <button class="menu-btn btn-calc" id="t-s-2" onclick="toggleType('s-2')">2-2 減法 (困難)</button>
+            <button class="menu-btn btn-calc" id="t-a-0" onclick="toggleType('a-0')">1-1 加法 (簡單)</button>
+            <button class="menu-btn btn-calc" id="t-s-0" onclick="toggleType('s-0')">2-1 減法 (簡單)</button>
+            <button class="menu-btn btn-calc" id="t-a-1" onclick="toggleType('a-1')">1-2 加法 (中等)</button>
+            <button class="menu-btn btn-calc" id="t-s-1" onclick="toggleType('s-1')">2-2 減法 (中等)</button>
+            <button class="menu-btn btn-calc" id="t-a-2" onclick="toggleType('a-2')">1-3 加法 (困難)</button>
+            <button class="menu-btn btn-calc" id="t-s-2" onclick="toggleType('s-2')">2-3 減法 (困難)</button>
         </div>
         <button class="start-action" id="startBtn" disabled onclick="startApp()">開始練習</button>
     </div>
